apps/observability/monitoring/service-blackbox.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox
  namespace: monitoring
spec:
  selector:
    app: blackbox
  ports:
    - name: http
      protocol: TCP
      port: 9115
      targetPort: 9115
  type: ClusterIP
