apps/observability/monitoring/service-firewalla-exporter.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: firewalla-exporter
  namespace: monitoring
spec:
  selector:
    app: firewalla-exporter
  ports:
    - name: http
      protocol: TCP
      port: 9878
      targetPort: 9878
  type: ClusterIP
