apps/observability/monitoring/service-pushgateway.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
  namespace: monitoring
spec:
  selector:
    app: pushgateway
  ports:
    - name: http
      protocol: TCP
      port: 9091
      targetPort: 9091
  type: ClusterIP
