apps/observability/monitoring/ingressroute-grafana.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.xrs444.net`)
      kind: Rule
      middlewares:
        - name: grafana-lan-only
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
