apps/observability/monitoring/ingressroute-prometheus.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.xrs444.net`)
      kind: Rule
      middlewares:
        - name: dashboard-auth
          namespace: traefik
        - name: dashboard-errors
          namespace: traefik
      services:
        - name: kube-prometheus-stack-prometheus
          port: 9090
  tls:
    secretName: letsencrypt-wildcard-cert-xrs444.net
